apply plugin: 'war'
group 'corgi'
version '1.0'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
}

dependencies {
    compile "com.dounine:clouddisk:$clouddisk_version"
    compile "org.springframework:spring-webmvc:$spring_version"
    compile "org.springframework.data:spring-data-mongodb:$spring_data_mongodb_version"
    compile "org.hibernate:hibernate-validator:$hibernate_validator_version"
    compile "org.aspectj:aspectjrt:$aspectjrt_version"
    compile "org.aspectj:aspectjweaver:$aspectjrt_version"
    compile "org.springframework:spring-aop:$spring_version"
    compile "javax.validation:validation-api:$javax_validation_version"
    compile "com.alibaba:fastjson:$fastjson_version"
    compile "jstl:jstl:$jstl_version"
    compile "org.apache.commons:commons-email:$commons_email_version"
    compile "org.apache.directory.studio:org.apache.commons.codec:$commons_codec_version"


}

